# rewrite_lowerbodyc3d_with_IK

./: .gitignore  LICENSE  README.md  Vagrantfile  result_fabrik.c3d  testing_commands
IKAlgorithms/: AcqPointReadAdapter.cpp  AcqPointReadAdapter.h  AcquisitionChain.cpp  AcquisitionChain.h  CMakeLists.txt  FabrikDoubleChainSolve.cpp  FabrikDoubleChainSolve.h  FabrikSolve.cpp  FabrikSolve.h  Joint3D.cpp  Joint3D.h  main.cpp
data/: Readme.md  create_results_optitrack.txt  create_results_rizoli.txt  forward_jumping_jacks.c3d  jog_natasha_003.c3d  jog_natasha_alt_001.c3d  jumping_jacks_alt_002.c3d  jumping_jacks_alt_003.c3d  jumping_jacks_cross_alt_right_001.c3d  jumping_jacks_cross_left_natasha_001.c3d  jumping_jacks_cross_right_natasha_001.c3d  jumping_jacks_forward_alt_001.c3d  jumping_jacks_frontal_natasha_001.c3d  jumping_jacks_frontal_natasha_002.c3d  jumping_jacks_natasha.c3d  jumping_jacks_natasha_alt_001.c3d  test_data.c3d  walk_faster_natasha_001.c3d  walk_faster_natasha_alt_001.c3d  walk_natasha_alt_001.c3d  walk_natasha_alt_002.c3d  walk_natasha_alt_003.c3d  walk_slow_natasha_001.c3d  walk_slow_natasha_002.c3d  walk_slow_natasha_003.c3d
data/optitrack/: jog_001.c3d  jumping_jacks_001.c3d  jumping_jacks_cross_left_001.c3d  jumping_jacks_cross_right_001.c3d  jumping_jacks_forward_002.c3d  jumping_jacks_forward_003.c3d  walk_faster_001.c3d  walk_slow_001.c3d  walk_slow_002.c3d  walk_slow_003.c3d
data/rizoli/: jog_001.c3d  jumping_jacks_001.c3d  jumping_jacks_002.c3d  jumping_jacks_003.c3d  jumping_jacks_cross_right_001.c3d  jumping_jacks_forward_001.c3d  walk_001.c3d  walk_002.c3d  walk_003.c3d  walk_faster_001.c3d
result/: Readme.md  forward_jumping_jacks_constrained.c3d  forward_jumping_jacks_unconstrained.c3d  forward_jumping_jacks_unconstrained_middle.c3d
