PROJECT(IKAlgorithms)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

macro(use_cxx11)
    if (CMAKE_VERSION VERSION_LESS "3.1")
        if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
        endif ()
    else ()
        set (CMAKE_CXX_STANDARD 11)
    endif ()
endmacro(use_cxx11)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_MODULE_PATH ${IKAlgorithms_SRCS})
SET(BTK_DIR ~/BTKCore/build)
SET(EIGEN2_DIR ~/eigen-git-mirror)

FIND_PACKAGE(BTK REQUIRED)
INCLUDE(${BTK_USE_FILE})
INCLUDE_DIRECTORIES(${EIGEN2_DIR}/Eigen/src)

SET(IKAlgorithms_SRCS main.cpp FabrikSolve.cpp FabrikSolve.h FabrikDoubleChainSolve.cpp FabrikDoubleChainSolve.h AcqPointReadAdapter.cpp AcqPointReadAdapter.h)
ADD_EXECUTABLE(IKAlgorithms ${IKAlgorithms_SRCS})
TARGET_LINK_LIBRARIES(IKAlgorithms BTKIO)
